--- a/Clase 10/css/style.css
+++ b/Clase 10/css/style.css
@@ -1,8 +1,7 @@
 body {
     box-sizing: border-box;
     margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-   background: rgba(255, 255, 255, 1);
+    font-family: 'Roboto', sans-serif;
 }
 .cabecera {
     background: rgba(28, 209, 176, 1);
@@ -13,19 +12,14 @@ body {
     padding: 30px ;
     margin: 0px;
 }
-main{
-    
-}
 .caja1 {
-    background: rgba(243, 243, 243, 1);
-    position: relative;
-    height: 20px;
+    display: inline-block;
+    background-color: #F3F3F3;
     width: 300px;
-    left: 25px;
-    top: 120px;
+    margin: 100px 50px;
     text-align: center;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    }
+}
 .cara1 {
     border-radius: 50%;
     position: relative;
@@ -34,18 +28,19 @@ main{
 .ver_más_1 {
     color: rgba(243, 243, 243, 1);
     background-color: rgba(0, 102, 159, 1);
+    margin-top: 60px;
     margin-left: 100px;
     margin-right: 100px;
     padding: 10px;
 }
 .caja2 {
-    background: rgba(243, 243, 243, 1);
-    position: relative;
-    height: 20px;
+    display: inline-block;
+    background-color: #F3F3F3;
     width: 300px;
-    left: 500px;
-    top: 100px;
+    margin: 100px 50px;
     text-align: center;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
     }
 .cara2 {
     border-radius: 50%;
@@ -55,18 +50,19 @@ main{
 .ver_más_2 {
     color: rgba(243, 243, 243, 1);
     background-color: rgba(0, 102, 159, 1);
+    margin-top: 60px;
     margin-left: 100px;
     margin-right: 100px;
     padding: 10px;
 }
 .caja3 {
-    background: rgba(243, 243, 243, 1);
-    position: relative;
-    height: 20px;
+    display: inline-block;
+    background-color: #F3F3F3;
     width: 300px;
-    left: 950px;
-    top: 80px;
+    margin: 100px 50px;
     text-align: center;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
     }
 .cara3 {
     border-radius: 50%;
@@ -76,6 +72,7 @@ main{
 .ver_más_3 {
     color: rgba(243, 243, 243, 1);
     background-color: rgba(0, 102, 159, 1);
+    margin-top: 60px;
     margin-left: 100px;
     margin-right: 100px;
     padding: 10px;
@@ -83,7 +80,5 @@ main{
 footer {
     background: rgba(0, 102, 159, 1);
     padding: 30px ;
-    margin-top: 800px;
     color: rgba(255, 249, 249, 1);
-    ;
 }
